dst/assets/css/flexbox.css
/* full page */
body, html{
    font-size: 100%;
    font-family: "Roboto", "Open Sans";
    background: white;
    margin:0;
    padding:0;
}

.graytop{
    
    min-height: 25px;
    background: #E5E4E5;
}

/* header */
nav ul{
    list-style: none;
    padding: 0;
    background: #FFF;

}

nav ul li a{
    color: #000;
    text-decoration: none;
    padding: .8rem 1rem;
    display: block;
    line-height:  1;
}
.memberLogin a{
    color: #000;
    text-decoration: none;
    padding: .8rem 1rem;
    display: block;
    line-height:  1;
}

nav ul li{
    border: 0.5px dotted #000;
}
/*Header -> Logo*/
.logo{
    margin-top: -20px;
    padding-left:8px;
}


nav div:first-child h1{
    line-height: 0;
    padding-left: 8px;
    text-align: left;
    
    
}
nav div:first-child h1, nav ul{
    margin: 0.5px;
}
#hamburger{
    display: none;
}
/*make the menu drop down*/
@media only screen and (max-width:480px){
    .menu{
        margin: 0 auto;
    }
    .dropDown{
        max-width: 98%;
    }
    .activeOne a {
        color: #000;
        text-decoration: none;
        padding: .8rem 1rem;
        display: block;
        line-height:  1;
    }
    
    #hamburger{
        display: inline;
   }
   
    #hamburger p {
        margin-top: 0px;
        padding-top: 10px;
        padding-right: 8px;
        float: right;
        font-size: 1.5rem;
    }
}

/* Footer */
.footer{
    display:flex;
    flex-direction: column;
    background: #81AA42;
}
.footer_content{
    display:flex;
    flex-direction: column;
    flex-wrap: wrap;
    background: #e4e7de;
}

.item{
    padding: 4% 4%;
}

.nospace h4{
    margin-bottom: 0px;
    font-weight: normal;
}
.nospace p{
    margin-top: 0;
}

.baseline{
    display: flex;
    flex-direction: row;
    flex-flow: wrap;
    justify-content: space-between;
}
.baseline, .baseline a{
    color: #FFF;
    text-decoration: none;
    padding: 4%;
}

.footerlogo img{
    max-width: 60%;
}

/* Partner with Us Body */
.body{
    background: white;
    min-height: 500px;
    margin-right: 8px;
    margin-left: 8px;
    display: flex;
    flex-direction: column;
}

.pagetitle{
    background: white;
    padding-bottom: 0px;
    height: 100px;
}

.pagetitle h1{
    color: #688D27;
    padding-left: 8px;
    padding-right: 8px;
    font-weight: 900;
    max-width: 50%;
    padding-bottom: 0px;
    
 }

 .row1{
    display: flex;
    flex-direction: column;
    padding-left: 8px;
    padding-right: 8px;
    
}
.row1_left{
    padding-top: 0px;
}

.row1_left p{
     color: #688D27;;
}

 .row1_right{
    padding-left: 10px;
    padding-right: 10px;
    z-index: 10;
}

 /* Partner with Us Form */
 #contact-form{
    max-width: 480px;
    background: #F6F6F4;
    padding: 20px 5px 20px 5px;
    margin-bottom: 20px;
    margin-left: 16px;
    margin-right: 16px;
    
} 

.form_head{
    font-weight: bold;
    padding: 0;
    margin: 0;
}

.text_input{
    width: 95%;
    border: none;
    padding-top: 5px;
    padding-bottom: 5px;
    padding-left: 5px;
    margin-top: 15px;
    margin-bottom: 15px;
}

.submit{
    background-color:#81AA42;
    border: none;
    color: white;
    width:100%;
    font-size: 16px;
    font-weight: bold;
    border-radius: 25px;
    padding-top: 12px;
    padding-bottom: 12px;
}

/*TODO fix the full width image for mobile*/
.row2{
    display: none;
   /* width: 100%;
    background-image: url(../img/design2018/img_partner.png);
    background-size: 100% 100%;
    background-size: cover;*/
    
}

.row2 img{
    display: none;
    /*visibility: hidden;
    max-width: 100%;
    padding-left: -10px;
    padding-right: -10px;
    margin: 0;*/
}

.row3_left h2{
    color: #688D27;
    font-weight: 900;
    max-width: 50%;
}



.row4 a {
    color: #81AA42;
    text-decoration: none;
    
}
.row4 img{
    padding-top: 20px;
}

.pwu_text{
    font-weight: 300;
    margin-top: 0px;
}
.section_head{
    font-weight: 800;
    margin-bottom: 0px; 
}
.img_right{
    display: flex;
    flex-direction: column;
    align-content: space-between;
    background: white;
    padding-left: 8px;
    padding-right: 8px;
    padding-bottom: 50px;
    padding-top: 50px;
    
}
.img_left{
    background: white;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    padding-left: 8px;
    padding-right: 8px;
    padding-bottom: 50px;
}

.img_left > .col1{ order:3;}
.img_left > .col2{ order:1;}
.img_left > .col3{ order:2;}

/*privacy.thml*/
.privacy_body{
    padding-left: 8px;
    padding-right: 8px;
}
/* contactus.html  */
.contactus_pagetitle h2{
    color: #688D27;
    padding-left: 8px;
    padding-right: 8px;
    font-weight: 900;
    max-width: 50%;
    padding-bottom: 0px;
}
.contactus_body{
    min-height: 250px;
    padding-left: 8px;
    padding-right: 8px;

}
.contactus_row{
    padding-left:8px;
    padding-right:8px;

}
/*
    Thanks.html
*/
.thanks{
    background-color: #E4E7DE;
    margin-left: -8px;
    margin-right: -32px;
    padding-left: 25px;
    padding-right: 25px;
    padding-top: 32px;
    padding-bottom: 32px;
    

}
.border{
    display: flex;
    justify-content: center;
    
}
.well{
    max-width: 70%;
    border: 1px solid #000000;
    background: #8AB43F; 
    -webkit-border-radius: 8px;
    -moz-border-radius: 8px;
    border-radius: 8px;
    padding: 20px;
    
    border: 1px solid black;
}
.thanks_center{
    font-weight: 500;
}
/* ... */

